fixed max width, added some nice spacing and fixed projects layout

--- a/CV.css
+++ b/CV.css
@@ -20,6 +20,10 @@ h3 a {
   text-decoration: none;
   color: inherit;
 }
+p,
+li {
+  max-width: 90%;
+}
 
 header {
   font-family: Arial, Helvetica, sans-serif;
@@ -31,7 +35,7 @@ header {
 }
 .subdiv {
   width: 100%;
-  padding-left: 20px;
+  padding-left: 10px;
   padding-top: 20px;
   display: flex;
   flex-direction: column;
@@ -54,6 +58,13 @@ header {
   width: calc(100% - 40px);
   margin-top: 12px;
 }
+.projects li {
+  font-family: Arial, sans-serif;
+  list-style: disc;
+  padding-left: 10px;
+  margin: 8px 0 0 0;
+  padding-bottom: 6px;
+}
 
 .skills {
   font-family: Arial, sans-serif;
@@ -64,7 +75,9 @@ header {
 .skills li {
   background: none;
 
-  padding: 2px 0;
+  padding-left: 10px;
+  padding-bottom: 15px;
+
   font-weight: normal;
   font-size: 1rem;
 }
@@ -80,4 +93,7 @@ footer {
   width: 100%;
   height: 60 px;
   background-color: #084c8b;
+}
+li ul {
+  padding-bottom: 50px;
 }
